Changes to use externally installed GDAL library

--- a/src/gov/nasa/worldwind/util/MessageStrings.properties
+++ b/src/gov/nasa/worldwind/util/MessageStrings.properties
@@ -866,6 +866,8 @@ gdal.GDALNotAvailable=GDAL library is not available
 gdal.GDALUtilitiesPathNotConfigured=Path to GDAL command line utilities (gdalwarp,gdal_translate) is not configured
 gdal.SharedDataFolderNotFound=GDAL warning: a shared folder with reprojection tables not found.
 gdal.SharedDataFolderFound=GDAL shared folder with reprojection tables set to {0}
+gdal.PluginFolderFound=GDAL plugins folder set to {0}
+gdal.PluginFolderNotFound=GDAL plugin folder not found.
 gdal.UnknownBuild=The current build {0} of GDAL framework is not known and could cause errors while reading or converting data
 gdal.UnsupportedOS=Native GDAL libraries are not available for this Operating System - {0}
 gdal.UseFullResolutionRaster=Full resolution raster {0} x {1} will be used to satisfy {2} x {3} request
